Correct Facebook icon spacing on retina

--- a/assets/stylesheets/components/common/_icon_2x.scss
+++ b/assets/stylesheets/components/common/_icon_2x.scss
@@ -17,7 +17,7 @@
   }
 
   .icon--facebook {
-    background-position: -36px -4px;
+    background-position: -40px -4px;
   }
 
   .icon--twitter {
